--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@emotion/babel-plugin": "11.11.0",
     "@nx/cypress": "17.3.1",
     "@nx/eslint": "17.3.1",
     "@nx/eslint-plugin": "17.3.1",
+    "@nx/jest": "17.3.1",
     "@nx/js": "17.3.1",
     "@nx/react": "17.3.1",
     "@nx/vite": "17.3.1",
@@ -29,6 +33,7 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -37,6 +42,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
+    "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -45,9 +51,13 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "17.3.1",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.3.2",
     "vite": "^5.0.0",
     "vitest": "^1.0.4"
