--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
+    "miragejs": "^0.1.48",
     "nx": "17.3.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
@@ -64,5 +65,9 @@
   },
   "nx": {
     "includedScripts": []
+  },
+  "volta": {
+    "node": "20.11.0",
+    "pnpm": "8.15.1"
   }
 }
