--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "prepare": "is-ci || husky"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,8 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@emotion/babel-plugin": "11.11.0",
     "@nx/cypress": "17.3.1",
     "@nx/eslint": "17.3.1",
@@ -51,9 +54,12 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^9.0.10",
+    "is-ci": "^3.0.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
+    "lint-staged": "^15.2.1",
     "miragejs": "^0.1.48",
     "nx": "17.3.1",
     "prettier": "^2.6.2",
