--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test",
+    "start": "nx run-many --all -t serve",
+    "build": "nx run-many --all -t build",
+    "test": "nx run-many --all -t test",
+    "lint": "nx run-many --all -t lint",
     "prepare": "is-ci || husky"
   },
   "private": true,
@@ -49,11 +50,14 @@
     "cypress": "^13.0.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "^27.6.3",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-sonarjs": "^0.23.0",
     "husky": "^9.0.10",
     "is-ci": "^3.0.1",
     "jest": "^29.4.1",
