--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx run-many --all -t serve",
+    "start": "nx serve",
     "build": "nx run-many --all -t build",
     "test": "nx run-many --all -t test",
     "lint": "nx run-many --all -t lint",
@@ -46,6 +46,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
+    "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
     "eslint": "~8.48.0",
@@ -58,6 +59,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-tailwindcss": "^3.14.1",
     "husky": "^9.0.10",
     "is-ci": "^3.0.1",
     "jest": "^29.4.1",
@@ -66,7 +68,9 @@
     "lint-staged": "^15.2.1",
     "miragejs": "^0.1.48",
     "nx": "17.3.1",
+    "postcss": "^8.4.33",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
