--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@phantombuster/design-system/components": [
+        "design-system/components/src/index.ts"
+      ],
+      "@phantombuster/design-system/core": ["design-system/core/src/index.ts"],
       "@phantombuster/phantoms/components": [
         "phantoms/components/src/index.ts"
       ],
