feat: add phantomcard

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@phantombuster/design-system/components": [
+      "@phantombuster-shadcn/design-system/components": [
         "design-system/components/src/*"
+      ],
+      "@phantombuster/design-system/components": [
+        "design-system/components/src/index.ts"
       ],
       "@phantombuster/design-system/core": ["design-system/core/src/index.ts"],
       "@phantombuster/phantoms/components": [
