--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-tailwindcss": "^3.14.1",
+    "gh-pages": "^6.1.1",
     "husky": "^9.0.10",
     "is-ci": "^3.0.1",
     "jest": "^29.4.1",
