--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@swc/helpers": "~0.5.2",
     "@tanstack/eslint-plugin-query": "^5.18.1",
     "@testing-library/react": "14.0.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
