--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.50.0",
     "react-router-dom": "^6.22.0",
     "tailwind-merge": "^2.2.1",
@@ -67,6 +68,7 @@
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/react-helmet": "^6.1.11",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
