--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
   "nx": {
     "includedScripts": []
   },
+  "packageManager": "pnpm@8.15.1",
   "volta": {
     "node": "20.11.0",
     "pnpm": "8.15.1"
