--- a/design-system/components/.eslintrc.json
+++ b/design-system/components/.eslintrc.json
@@ -4,7 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {
+        "react/prop-types": "off"
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
