--- a/package.json
+++ b/package.json
@@ -39,15 +39,19 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
+    "type-fest": "^4.10.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@anatine/zod-mock": "^3.13.3",
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@emotion/babel-plugin": "11.11.0",
+    "@faker-js/faker": "^8.4.0",
+    "@jest/types": "^29.6.3",
     "@nx/cypress": "18.0.0",
     "@nx/eslint": "18.0.0",
     "@nx/eslint-plugin": "18.0.0",
@@ -84,11 +88,13 @@
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-tailwindcss": "^3.14.1",
+    "eslint-plugin-testing-library": "^6.2.0",
     "gh-pages": "^6.1.1",
     "husky": "^9.0.10",
     "is-ci": "^3.0.1",
