--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@swc/helpers": "~0.5.2",
     "@tanstack/eslint-plugin-query": "^5.18.1",
     "@testing-library/react": "14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/jest": "^29.4.0",
     "@types/node": "20.11.16",
