--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@ahooksjs/use-url-state": "^3.5.1",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
     "@hookform/resolvers": "^3.3.4",
@@ -31,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
@@ -71,6 +71,7 @@
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/jest": "^29.4.0",
     "@types/node": "20.11.16",
+    "@types/qs": "^6.9.11",
     "@types/react": "18.2.52",
     "@types/react-dom": "18.2.18",
     "@types/react-helmet": "^6.1.11",
