--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@tanstack/eslint-plugin-query": "^5.18.1",
+    "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@total-typescript/ts-reset": "^0.5.1",
