--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -15,6 +15,7 @@
   "include": [
     "vite.config.ts",
     "vitest.config.ts",
+    "vitest-setup.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.tsx",
