--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "lint-staged": "^15.2.1",
     "miragejs": "^0.1.48",
     "nx": "18.0.0",
+    "nx-cloud": "18.0.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
