ci: add nx workflows

--- a/project.json
+++ b/project.json
@@ -73,14 +73,24 @@
       }
     },
     "deploy": {
-      "dependsOn": ["build"],
       "executor": "nx:run-commands",
       "options": {
         "commands": [
           "gh-pages -d dist/phantombuster -m \"chore: deploy latest updates\""
         ]
       },
-      "defaultConfiguration": "production"
+      "defaultConfiguration": "production",
+      "configurations": {
+        "production": {
+          "commands": [
+            "git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git",
+            "git config user.name \"github-actions-bot\"",
+            "git config user.email \"support+actions@github.com\"",
+            "gh-pages -u \"github-actions-bot <support+actions@github.com>\" -d dist/phantombuster -m \"chore: deploy latest updates\""
+          ],
+          "parallel": false
+        }
+      }
     }
   },
   "tags": ["type:ui"]
