--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "invariant": "^2.2.4",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -68,6 +69,7 @@
     "@testing-library/react": "14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/invariant": "^2.2.37",
     "@types/jest": "^29.4.0",
     "@types/node": "20.11.16",
     "@types/qs": "^6.9.11",
